--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
           <div class="collapse navbar-collapse" id="navcol-1">
             <ul class="nav navbar-nav">
               <li class="nav-item" role="presentation">
+                 <a class="nav-link active" href="#">Home</a>
+              </li>
+              <li class="nav-item" role="presentation">
+                <a class="nav-link active" href="#">About Us</a>
+              </li>
+              <li class="nav-item" role="presentation">
+                <a class="nav-link active" href="#">Contact us</a>
+              </li>
+              <!-- <li class="nav-item" role="presentation">
                 <a class="nav-link active" href="#">Link</a>
               </li>
               <li class="nav-item" role="presentation">
                 <a class="nav-link active" href="#">Link</a>
-              </li>
-              <li class="nav-item" role="presentation">
-                <a class="nav-link active" href="#">Link</a>
-              </li>
-              <li class="nav-item" role="presentation">
-                <a class="nav-link active" href="#">Link</a>
-              </li>
-              <li class="nav-item" role="presentation">
-                <a class="nav-link active" href="#">Link</a>
-              </li>
+              </li> -->
               <li class="dropdown">
                 <a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown"aria-expanded="false" href="#">services</a>
                 <div class="dropdown-menu" role="menu">
