--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
               <button type="submit" class="btn text-secondary btn-outline-white btn-block">Subscribe</button>
             </div>
             <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-              <img src="img/myimage (2).jpeg" alt="">
+              <img src="myimage (2).jpeg" alt="">
               <h1>anaish rathi is here</h1>
 
             </div>
